--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blogspot.catin136.android.toomanywifi"
     android:versionCode="1"
-    android:versionName="1.1" android:installLocation="preferExternal">
+    android:versionName="1.1">
 
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
